--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "inquirer": "^9.1.5",
     "inquirer-date-prompt": "^3.0.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.21",
     "nodemon": "^2.0.22"
   }
 }
